增加订单、购物车、收货地址等功能。

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,18 +1,5 @@
 <!DOCTYPE html>
-<!-- 
-Theme: JANGO - Ultimate Multipurpose HTML Theme Built With Twitter Bootstrap 3.3.6
-Version: 1.3.7
-Author: Themehats
-Site: http://www.themehats.com
-Purchase: http://themeforest.net/item/jango-responsive-multipurpose-html5-template/11987314?ref=themehats
-Contact: support@themehats.com
-Follow: http://www.twitter.com/themehats
--->
-<!--[if IE 9]> <html lang="en" class="ie9"> <![endif]-->
-<!--[if !IE]><!-->
 <html lang="en">
-    <!--<![endif]-->
-    <!-- BEGIN HEAD -->
 
     <head>
         <meta charset="utf-8" />
@@ -96,7 +83,7 @@ Follow: http://www.twitter.com/themehats
                         <nav class="c-mega-menu c-pull-right c-mega-menu-dark c-mega-menu-dark-mobile c-fonts-uppercase c-fonts-bold">
                             <ul class="nav navbar-nav c-theme-nav">
                                 <li class="c-active">
-                                    <a href="index.html" class="c-link dropdown-toggle">主页
+                                    <a href="index" class="c-link dropdown-toggle">主页
                                     </a>
                                 </li>
                                 <li>
